# max-server

./: Cargo.toml  README.md  Rocket.toml  client.py  lib.rs
src/: lib.rs  main.rs  server.rs
