[package]
name = "max-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "max_server"
path = "src/bin/main.rs"

[lib]
name = "max_server"
path = "src/lib.rs"

[dependencies]
rocket = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
